# Hometask_19_2

./: .gitignore  README.md  data.json  project  pyproject.toml
catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog/managment/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_record_version.py
catalog/templates/catalog/: base.html  contact.html  contacts.html  index.html  product.html  product_confirm_delete.html  product_form.html  product_list.html  record_confirm_delete.html  record_detail.html  record_list.html
catalog/templates/catalog/include/: inc_catalog_menu.html
config/: settings.py  urls.py
static/js/: bootstrap.min.js  holdermin.js  popper.min.js
users/: forms.py  models.py  urls.py  views.py
users/managmenent/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
