[tool.poetry]
name = "hometask-19-2"
version = "0.2.0"
description = ""
authors = ["Tanya <tatiana-psy@yandex.ru>"]
readme = "README.md"
packages = [{include = "hometask_19_2"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
